--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@shadcn/ui": "^0.0.4",
     "bootstrap": "^5.3.3",
     "next": "^15.1.7",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.2",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
